--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Kenneth Galsim</title>
+    <title>Development</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Dev John Kenneth Galsim</h1>
     <h1>!!</h1>
 </body>
 </html>
